--- a/package.json
+++ b/package.json
@@ -1,29 +1,11 @@
 {
   "name": "backend-express",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/main.ts"
+    "start": "ts-node src/main.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/laska4723/backend-express.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/laska4723/backend-express/issues"
-  },
-  "homepage": "https://github.com/laska4723/backend-express#readme",
-  "keywords": [],
-  "description": "",
   "dependencies": {
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "express": "^4.21.2",
-    "prettier": "^3.6.2"
+    "express": "^4.21.2"
   },
   "prettier": {
     "singleQuote": true,
@@ -33,7 +15,19 @@
     "endOfLine": "auto"
   },
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
     "@types/express": "^4.17.23",
-    "typescript": "^5.9.2"
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.1"
   }
 }
