--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "start": "ts-node src/main.ts"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1"
   },
   "prettier": {
     "singleQuote": true,
@@ -27,6 +29,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.2.0",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.1"
   }
