--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "backend-express",
   "version": "1.0.0",
   "scripts": {
-    "start": "ts-node src/main.ts"
+    "start": "ts-node src/main.ts",
+    "build": "tsc",
+    "serve": "node dist/main.js"
   },
   "dependencies": {
     "express": "^4.21.2",
