--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,5 +20,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Lint project
+        run: npm run lint
+
       - name: Build project
         run: npm run build
