feat: Исправил package.json (v.2)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "ts-node src/main.ts",
     "build": "tsc",
-    "serve": "node dist/main.js"
+    "serve": "node dist/main.js",
+    "lint": "eslint src --max-warnings=0"
   },
   "dependencies": {
     "express": "^4.21.2",
