--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint src --max-warnings=0"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
     "express": "^4.21.2",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1"
@@ -23,7 +24,7 @@
     "@types/express": "^4.17.23",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
-    "eslint": "^9.33.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
