--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "class": "^0.1.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "express": "^4.21.2",
     "pino": "^9.9.0",
-    "pino-pretty": "^13.1.1"
+    "pino-pretty": "^13.1.1",
+    "reflect-metadata": "^0.2.2",
+    "transformer": "^1.2.8"
   },
   "prettier": {
     "singleQuote": true,
