--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@faker-js/faker": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^17.2.2",
     "express": "^4.21.2",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
