--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
     "express": "^4.21.2",
+    "inversify": "^7.10.1",
+    "koffi": "^2.14.1",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "reflect-metadata": "^0.2.2"
